<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CowNewEntryActivity"
    android:background="@drawable/main_header_selector">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/ic_folder_open_24px" />

            <TextView
                android:id="@+id/tvGrlib"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:text="TextView"
                android:layout_alignTop="@+id/ivIcon"
                android:layout_toRightOf="@+id/ivIcon"
                android:textColor="#1A237E"
                android:textSize="36sp" />

        </RelativeLayout >



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TipUnosaHint"
            android:layout_marginTop="6dp">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdownTipUnosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="20sp"
                android:textStyle="bold"
                />
<!--                android:background="#FFFFFF"-->

<!--            android:background="@android:color/transparent"-->

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/TextInputLayoutStaja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uStaju"
            android:layout_marginTop="6dp">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdownStaja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/TextInputLayoutRazlogPremestaja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/razlogPremestaja"
            android:layout_marginTop="6dp">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdownRazlogPremestaja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    <Button
        android:id="@+id/buttonSnimiUnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        style="@style/Widget.MaterialComponents.Button"
        android:drawable="@android:drawable/ic_menu_add"
        android:onClick="onClickBtnSave"
        android:text="Snimi"
        android:textSize="16sp"
        android:textColor="#FFE0F7FA"
        />

    </LinearLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminateDrawable="@drawable/progress"
        android:paddingBottom="50dp"
        android:gravity="top"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>